--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Server Control Panel</title>
+        <link rel="icon" type="image/ico" href="assets/icon.ico">
     </head>
 
     <body class="light-mode">
         <header class="top-bar">
             <h1 data-i18n="title">Server Control Panel</h1>
             <div class="controls">
-                <select id="language-switcher">
+                <label for="language-switcher"></label><select id="language-switcher">
                     <option value="en">English</option>
                     <option value="de">Deutsch</option>
                 </select>
-                <button id="theme-switcher" class="icon-button" data-i18n-title="toggleTheme">☀️</button>
+                <button id="theme-switcher" class="icon-button" data-i18n-title="toggleTheme">
+                    <img src="assets/lightMode.png" class="button-image light-icon" alt="☀️">
+                    <img src="assets/darkMode.png" class="button-image dark-icon" alt="🌙">
+                </button>
             </div>
         </header>
 
