--- a/app/index.html
+++ b/app/index.html
@@ -24,27 +24,24 @@
 
         <div id="app-body">
             <main class="main-content">
-                <div class="card">
-                    <div class="card-header">
-                        <h2 data-i18n="serverControls">Server Controls</h2>
-                        <div id="server-status-indicator" title="Server is running"></div>
-                    </div>
+                <div class="cards-container">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 data-i18n="serverControls">Server Controls</h2>
+                            <div id="server-status-indicator" title="Server is running"></div>
+                        </div>
 
-                    <div class="button-group">
-                        <button id="start-btn" data-i18n="startServer">Start Server</button>
-                        <button id="stop-btn" data-i18n="stopServer">Stop Server</button>
-                    </div>
+                        <div class="button-group">
+                            <button id="start-btn" data-i18n="startServer">Start Server</button>
+                            <button id="stop-btn" data-i18n="stopServer">Stop Server</button>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="port-input" data-i18n="portLabel">Port:</label>
-                        <input type="number" id="port-input" value="5000" min="80" max="65535">
+                        <div class="form-group">
+                            <label for="port-input" data-i18n="portLabel">Port:</label>
+                            <input type="number" id="port-input" value="5000" min="80" max="65535">
+                        </div>
                     </div>
-                </div>
-
-                <div class="logs-section">
-                    <div id="logs-container" class="hidden">
-                        <pre id="logs-output"></pre>
-                    </div>
+                    <!-- add more cards here -->
                 </div>
             </main>
 
@@ -65,6 +62,11 @@
             </aside>
         </div>
 
+        <div class="logs-section hidden">
+            <div id="logs-container">
+                <pre id="logs-output"></pre>
+            </div>
+        </div>
         <footer class="app-footer">
             <div class="footer-left">
                 <button id="toggle-logs-btn" data-i18n="toggleLogs">Show Logs</button>
@@ -73,7 +75,7 @@
                 </div>
             </div>
             <div class="footer-right">
-                <button id="toggle-stats-btn" data-i18n="toggleStatistics">Show Statistics</button>
+                <button id="toggle-stats-btn" data-i18n="showStatistics">Show Statistics</button>
             </div>
         </footer>
     </body>
