--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
                     <div class="card">
                         <div class="card-header">
                             <h2 data-i18n="serverControls">Server Controls</h2>
-                            <div id="server-status-indicator" title="Server is running"></div>
+                            <div id="server-status-indicator" title="Server is running" class="status-stopped"></div>
                         </div>
 
                         <div class="button-group">
