better? installers create shortcuts buttons in app

--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,16 @@
                         <img src="assets/copy-light.png" class="dark-icon" alt="Copy">
                     </button>
                 </div>
+
+                <hr>
+                <div id="shortcut-options-container" class="hidden"> <!-- only show on Windows -->
+                    <h3 data-i18n="shortcutsTitle">Create shortcuts</h3>
+                    <div class="button-group shortcut-buttons">
+                        <button id="create-startMenu-shortcut-btn" data-i18n="createStartMenuShortcut">Create Start Menu shortcut</button>
+                        <button id="create-desktop-shortcut-btn" data-i18n="createDesktopShortcut">Create Desktop shortcut</button>
+                    </div>
+                </div>
+
                 <button id="close-modal-btn" data-i18n="close">Close</button>
             </div>
         </div>
