fixed stats expand line wrap thingy

--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
             </main>
 
             <aside id="stats-sidebar" class="sidebar">
-                <div> <!-- class="card"  fixes wrap on expand -->
+                <div class="statistics"> <!-- class="card" fixes wrap on expand -->
                     <h2 data-i18n="statistics">Statistics</h2>
                     <p>
                         <span data-i18n="uptime">Uptime</span>: <span id="uptime-display">00:00:00</span><br>
