separate css into files; modal animations

--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
         </div>
 
         <!-- Initial Modal -->
-        <div id="modal-backdrop" class="modal hidden">rs
+        <div id="initial-modal" class="modal hidden">
             <div id="modal-dialog" class="modal-dialog card">
                 <h3 data-i18n="initialPasswordTitle">Initial Password</h3>
                 <p data-i18n="initialPasswordDesc">This is the first time you are running the application. Please copy and store this randomly generated password in a safe place.</p>
