improved time handling export/import time settings; fix screen width

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -69,10 +69,16 @@
                             <label for="time-global-end" data-i18n="disableAt">Disable At:</label>
                             <input type="time" id="time-global-end">
                         </div>
-                        <div class="button-group">
-                            <button id="time-advanced-btn" data-i18n="advanced">Advanced</button>
-                            <button id="time-save-btn" data-i18n="save">Save</button>
-                            <button id="time-clear-btn" data-i18n="clear">Clear</button>
+                        <div class="button-group time-buttons">
+                            <div class="button-subgroup">
+                                <button id="time-advanced-btn" data-i18n="advanced">Advanced</button>
+                                <button id="time-save-btn" data-i18n="save">Save</button>
+                                <button id="time-clear-btn" data-i18n="clear">Clear</button>
+                            </div>
+                            <div class="button-subgroup">
+                                <button id="time-export-btn" class="ml-auto" data-i18n="export">Export</button>
+                                <button id="time-import-btn" data-i18n="import">Import</button>
+                            </div>
                         </div>
                     </div>
 
