--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -243,6 +243,21 @@
             </div>
         </div>
 
+        <div id="update-modal" class="modal hidden">
+            <div id="update-modal-dialog" class="modal-dialog card">
+                <h3 data-i18n="updateAvailableTitle">Update Available</h3>
+                <p data-i18n="newVersionAvailable">A new version (<strong id="update-version-number"></strong>) is available. You are currently on version <strong id="current-version-number"></strong>.</p>
+
+                <h4 data-i18n="releaseNotes">Release Notes:</h4>
+                <div id="update-release-notes" class="release-notes-container"></div>
+
+                <div class="modal-buttons button-group">
+                    <button id="update-later-btn" data-i18n="updateLater">Later</button>
+                    <button id="update-download-btn" data-i18n="updateDownload">Download</button>
+                </div>
+            </div>
+        </div>
+
         <div id="confirm-modal" class="modal hidden">
             <div class="modal-dialog card">
                 <h3 id="confirm-title">Confirmation</h3>
