update notif fixes

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -246,7 +246,7 @@
         <div id="update-modal" class="modal hidden">
             <div id="update-modal-dialog" class="modal-dialog card">
                 <h3 data-i18n="updateAvailableTitle">Update Available</h3>
-                <p data-i18n="newVersionAvailable">A new version (<strong id="update-version-number"></strong>) is available. You are currently on version <strong id="current-version-number"></strong>.</p>
+                <p id="update-version-paragraph"></p>
 
                 <h4 data-i18n="releaseNotes">Release Notes:</h4>
                 <div id="update-release-notes" class="release-notes-container"></div>
