new shortcut creation system; blockUpdateNotification

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -252,8 +252,9 @@
                 <div id="update-release-notes" class="release-notes-container"></div>
 
                 <div class="modal-buttons button-group">
-                    <button id="update-later-btn" data-i18n="updateLater">Later</button>
-                    <button id="update-download-btn" data-i18n="updateDownload">Download</button>
+                    <button id="update-download-btn" data-i18n="download">Download</button>
+                    <button id="update-later-btn" data-i18n="later">Later</button>
+                    <button id="update-never-btn" data-i18n="dontAskAgain">Don't ask again</button>
                 </div>
             </div>
         </div>
