--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
         </form>
         <p id="error-message" class="error"></p>
     </div>
-    <script src="/login.js"></script>
+    <script type="module" src="/login.js"></script>
     </body>
 </html>
