404 page, Update-IMD script

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title id="title">InStep Server Control Panel vx.x.x</title>
-        <link rel="icon" type="image/ico" href="assets/icon.ico">
+        <link rel="icon" type="image/png" href="assets/icon.png">
     </head>
 
     <body class="light-mode">
