--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Login - InStep IMD</title>
-        <link rel="stylesheet" href="/login.css">
+        <link rel="stylesheet" href="login.css">
     </head>
     <body>
     <div class="login-container">
@@ -14,6 +14,6 @@
         </form>
         <p id="error-message" class="error"></p>
     </div>
-    <script type="module" src="/login.js"></script>
+    <script type="module" src="login.js"></script>
     </body>
 </html>
