--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <title>Login - InStep IMD</title>
         <link rel="stylesheet" href="login.css">
+        <link rel="icon" type="image/png" href="/assets/icon.png">
     </head>
     <body>
     <div class="login-container">
-        <h1>IMD Access</h1>
+        <div class="header">
+            <img src="/assets/icon.png" alt="">
+            <h1>IMD Login</h1>
+        </div>
         <form id="login-form">
             <label for="password"></label><input type="password" id="password" placeholder="Enter Password" required>
             <button type="submit">Login</button>
