--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <link rel="icon" type="image/png" href="/assets/icon.png">
     <style>
         /* Basic Reset */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
@@ -20,7 +21,7 @@
         }
 
         img.logo {
-            max-width: 150px;
+            max-width: 130px;
             margin-bottom: 30px;
         }
 
@@ -86,7 +87,7 @@
 </head>
 <body>
 
-<img src="/login/assets/icon.png" alt="Logo" class="logo">
+<img src="/assets/icon.png" alt="Logo" class="logo">
 
 <h1>404</h1>
 <p>Oops! The page you are looking for does not exist.</p>
