docs concept, restructure routes

--- a/sites/public/404.html
+++ b/sites/public/404.html
@@ -93,7 +93,7 @@
 <p>Oops! The page you are looking for does not exist.</p>
 
 <div class="buttons">
-    <a href="/">App</a>
+    <a href="/app">App</a>
     <a href="/docs">Documentation</a>
 </div>
 
