--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -44,6 +44,10 @@
                             <button id="stop-btn" data-i18n="stopServer" disabled>Stop Server</button>
                         </div>
 
+                        <div class="">
+
+                        </div>
+
                         <div class="form-group">
                             <label for="port-input" data-i18n="portLabel">Port:</label>
                             <input type="number" id="port-input" value="5000" min="80" max="65535">
