--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -44,10 +44,6 @@
                             <button id="stop-btn" data-i18n="stopServer" disabled>Stop Server</button>
                         </div>
 
-                        <div class="">
-
-                        </div>
-
                         <div class="form-group">
                             <label for="port-input" data-i18n="portLabel">Port:</label>
                             <input type="number" id="port-input" value="5000" min="80" max="65535">
@@ -111,8 +107,42 @@
                             </div>
                         </div>
 
-                        <!-- setting a new password, hidden by default -->
+                        <!-- hidden by default -->
                         <div class="requires-unlock">
+                            <hr>
+                            <div id="session-section">
+                                <h3 data-i18n="sessionTitle">Session</h3>
+
+                                <div class="form-group checkbox-group">
+                                    <input type="checkbox" id="imd-api-toggle">
+                                    <label for="imd-api-toggle" data-i18n="enableIMDAPI">Enable IMD API</label>
+                                </div>
+
+                                <h4 data-i18n="sessionDuration">Duration</h4>
+                                <p data-i18n="sessionDurationDesc">Configure how long users stay logged in. This will apply to new logins.</p>
+
+                                <div class="duration-controls">
+                                    <div class="duration-input-group">
+                                        <label for="session-years-input" data-i18n="years">Years</label>
+                                        <input type="number" id="session-years-input" min="0" value="0">
+                                    </div>
+                                    <div class="duration-input-group">
+                                        <label for="session-days-input" data-i18n="days">Days</label>
+                                        <input type="number" id="session-days-input" min="0" value="30">
+                                    </div>
+                                    <div class="duration-input-group">
+                                        <label for="session-hours-input" data-i18n="hours">Hours</label>
+                                        <input type="number" id="session-hours-input" min="0" max="23" value="0">
+                                    </div>
+                                    <div class="duration-input-group">
+                                        <label for="session-minutes-input" data-i18n="minutes">Minutes</label>
+                                        <input type="number" id="session-minutes-input" min="0" max="59" value="0">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr>
+                            <h3 data-i18n="changePassword">Change password</h3>
                             <div class="form-group password-wrapper">
                                 <div class="input-with-icon">
                                     <label for="new-password-input" data-i18n="newPassword">New Password:</label>
@@ -123,31 +153,6 @@
                                         <img src="assets/eye-light-open.png" class="dark-icon eye-open-icon" alt="👁️">
                                         <img src="assets/eye-light-closed.png" class="dark-icon eye-closed-icon" alt="👁️">
                                     </button>
-                                </div>
-                            </div>
-                        </div>
-
-                        <hr class="requires-unlock">
-                        <div id="session-duration-section" class="requires-unlock">
-                            <h3 data-i18n="sessionDurationTitle">Session Duration</h3>
-                            <p data-i18n="sessionDurationDesc">Configure how long users stay logged in. This will apply to new logins.</p>
-
-                            <div class="duration-controls">
-                                <div class="duration-input-group">
-                                    <label for="session-years-input" data-i18n="years">Years</label>
-                                    <input type="number" id="session-years-input" min="0" value="0">
-                                </div>
-                                <div class="duration-input-group">
-                                    <label for="session-days-input" data-i18n="days">Days</label>
-                                    <input type="number" id="session-days-input" min="0" value="30">
-                                </div>
-                                <div class="duration-input-group">
-                                    <label for="session-hours-input" data-i18n="hours">Hours</label>
-                                    <input type="number" id="session-hours-input" min="0" max="23" value="0">
-                                </div>
-                                <div class="duration-input-group">
-                                    <label for="session-minutes-input" data-i18n="minutes">Minutes</label>
-                                    <input type="number" id="session-minutes-input" min="0" max="59" value="0">
                                 </div>
                             </div>
                         </div>
