session lock; project cache

--- a/sites/public/imdInUse.html
+++ b/sites/public/imdInUse.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IMD API Disabled</title>
+    <title>IMD in use</title>
     <link rel="icon" type="image/png" href="/assets/icon.png">
     <style>
         /* Basic Reset */
@@ -89,8 +89,14 @@
 
 <img src="/assets/icon.png" alt="Logo" class="logo">
 
-<h3>API disabled</h3>
-<p>The Indoor Map Digitalizer API has been disabled by the server administrator.</p>
+<h3>Indoor Map Digitalizer in use</h3>
+<p>
+    The Indoor Map Editor is currently in use by another person.
+    <br>
+    To prevent conflicting edits, only one session is allowed at a time.
+    <br>
+    Please try again in a few minutes, or contact the server administrator.
+</p>
 
 <div class="buttons">
     <a href="/docs">Documentation</a>
