renderer: enter for save in security

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -108,7 +108,7 @@
                         </div>
 
                         <!-- hidden by default -->
-                        <div class="requires-unlock">
+                        <div id="locked-section" class="requires-unlock">
                             <hr>
                             <div id="session-section">
                                 <h3 data-i18n="sessionTitle">Session</h3>
