--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,7 +14,8 @@
                 <div class="select-wrapper">
                     <img src="assets/language-light.png" class="language-icon dark-icon" alt="🌐">
                     <img src="assets/language-dark.png" class="language-icon light-icon" alt="🌐">
-                    <label for="language-switcher"></label><select id="language-switcher">
+                    <label for="language-switcher"></label>
+                    <select id="language-switcher">
                         <option value="en">English</option>
                         <option value="de">Deutsch</option>
                     </select>
